--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
       "es2021": true
     },
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "plugin:react/recommended",
+      "standard"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -44,6 +44,7 @@
       "@typescript-eslint"
     ],
     "rules": {
+      "no-use-before-define": "off",
       "semi": [
         2,
         "always"
@@ -70,9 +71,9 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
+    "@typescript-eslint/eslint-plugin": "^4.16.1",
+    "@typescript-eslint/parser": "^4.16.1",
+    "eslint": "^7.21.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
