--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start:dev": "webpack serve --config webpack.dev.js --progress",
+    "build": "webpack --config webpack.prod.js",
+    "start": "node ./server.js",
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
+    "eslint-fix": "eslint --fix \"./src/**/*.{ts,tsx}\""
   },
   "eslintConfig": {
     "env": {
       "browser": true,
-      "es2021": true
+      "es2021": true,
+      "jest": true
     },
     "extends": [
       "plugin:react/recommended",
@@ -39,6 +41,11 @@
         2,
         "always"
       ]
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
     }
   },
   "prettier": {
@@ -47,6 +54,12 @@
     "semi": true,
     "singleQuote": true,
     "arrowParens": "avoid"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
   },
   "browserslist": {
     "production": [
@@ -61,23 +74,47 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@babel/preset-react": "^7.13.13",
+    "@types/jest": "^26.0.22",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-select": "^4.0.13",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "eslint": "^7.21.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.0",
+    "dotenv-webpack": "^7.0.2",
+    "eslint": "^7.23.0",
+    "eslint-config-react": "^1.1.7",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-react": "^7.23.1",
+    "extract-loader": "^5.1.0",
+    "file-loader": "^6.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
+    "path-browserify": "^1.0.1",
+    "prettier": "^2.2.1",
+    "process": "^0.11.10",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.1.0",
+    "webpack": "^5.31.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "@testing-library/react": "^11.2.6",
+    "axios": "^0.21.1",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "eslint-config-standard": "^16.0.2",
+    "express": "^4.17.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "react-select": "^4.2.1",
     "typescript": "^4.2.3"
   }
