--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "noEmit": false,
+    "jsx": "react-jsx"
   },
   "include": ["src"]
 }
